
- continuous metric interpolation in parallel with background migration
- pliant vertex smoothing near metric conformity
- overhaul cavity operator to allow simultaneous tet and tri changes

Thu, Jul 18, 2019 : Released Refine 1.9.0

- background grid load balanced with adapted grid
- metric interpolation cached and reused when possible
- parallel artifacts reduced with subdivision allowed on geometry
- geometry constraint metric evaluated on background grid and interpolated
- geometry constraint metric anisotropic for CAD feature size
- geometry constraint metric gained edge curvature terms
- complexity estimates for surface-only adaptation
- ugrid64 format
- 64bit global node (and cell indexes)
- ref_inflate gained mapbc, family, and bc interface and parallel
- module deploys match FUN3D v13.5
- ref_cloud replaces ref_dict_aux for ref_recon
- degenerate face uv bounded by degenerate edge uv range
- interpolation to a subset of the domain
- add buffer option to fixed-point metric
- improve plotting of geometry curvature

Thu, Mar 22, 2019 : Released Refine 1.8.22

- continuously interpolated metric from background grid for sequential
- interpolation weights are clipped to prevent field and metric extrapolation
- ref_gather_scalar_tec exports one triangle faceid per zone
- surface adaptation cavity operator extended to edge splits
- curvature constraints near model tolerance are ignored
- curvature based metric includes isotropic geometry edge curvature
- curvature based metric defaults to 2 segments per radian (28 degrees)
- parmetis can be called on subset of processors (also avoids zero part input)
- use metis on smaller grids
- swap in 3D via cavity operator
- tetgen shell uses poly format to allow voids
- tetgen called with q2.0/10 to create coarser initial grids without slivers
- termination recommendation based on one percent edge-metric ratio limit change
- edge-metric ratio post floor more aggressive once ceiling drops below 3