@@ -1,4 +1,5 @@
 
+- remove ref_driver -l limit metric change, sanitizing metric option
 - continuous metric interpolation in parallel with background migration
 - pliant vertex smoothing near metric conformity
 - overhaul cavity operator to allow simultaneous tet and tri changes
